--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1",
+    "styled-reset": "^4.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
